cabal-version: >=1.10
name:          servant-prometheus
version:       0.0.1
synopsis:      Helpers for using promethues with servant
description:   Helpers for using promethues with servant, e.g.. counters per endpoint.
license:       BSD3
license-file:  LICENSE
author:
  Anchor Engineering <engineering@lists.anchor.net.au>, Servant Contributors

maintainer:
  Sked Life

category:      Servant, Web, System
build-type:    Simple
tested-with:   GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5
extra-source-files: README.md CHANGELOG.md

source-repository HEAD
  type:     git
  location: https://github.com/skedlife/servant-prometheus.git

library
  exposed-modules:  Servant.Prometheus
  other-modules:    Servant.Prometheus.Internal
  hs-source-dirs:   lib
  build-depends:
      base
    , prometheus
    , http-types
    , hashable
    , servant
    , text
    , time
    , unordered-containers
    , wai
    , servant-multipart
    , servant-rawm

  default-language: Haskell2010

-- test-suite spec
--   type:             exitcode-stdio-1.0
--   ghc-options:      -Wall
--   default-language: Haskell2010
--   hs-source-dirs:   test
--   main-is:          Spec.hs
--   other-modules:    Servant.EkgSpec
--   build-tool-depends: hspec-discover:hspec-discover
--   build-depends:
--       aeson
--     , base
--     , ekg
--     , ekg-core
--     , hspec                 >=2     && <3
--     , http-client
--     , servant
--     , servant-client
--     , servant-ekg
--     , servant-server
--     , text
--     , transformers
--     , unordered-containers
--     , wai
--     , warp

-- benchmark bench
--   type:             exitcode-stdio-1.0
--   hs-source-dirs:   bench
--   main-is:          Main.hs
--   ghc-options:      -Wall -threaded
--   default-language: Haskell2010
--   build-depends:
--       aeson
--     , base            >=4     && <5
--     , ekg
--     , ekg-core
--     , process
--     , servant-ekg
--     , servant-server
--     , text
--     , wai
--     , warp
